--- a/NvencExport/NvencExport.vcxproj
+++ b/NvencExport/NvencExport.vcxproj
@@ -185,6 +185,8 @@
   <ItemGroup>
     <CudaCompile Include="RgbaToNv12.cu">
       <FileType>Document</FileType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
     </CudaCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
